# Eigix

./: .gitignore  CMakeLists.txt
include/: Matrix2D.hpp  Tensor3D.hpp
include/eigix/: Matrix2D.hpp  Tensor3D.hpp
tests/: test_2d.cpp  test_2d.hpp  test_3d.cpp  test_3d.hpp  test_main.cpp  tests.hpp
